linking to the header ejs

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -9,6 +9,8 @@
 <body>
 Before  
 <br>
+<%- include('../partials/header.ejs') %>
+<%# Added the header of the application %>
 <%- body %>
 <br>
  After   
