--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <a>Libray</a>
     <ul>
     <li><a href="authors">Authors</a></li>
-    <li><a href="authors/new">New</a></li>
+    <li><a href="authors/new">Add Authors</a></li>
     <li><a>Pages</a></li>
     </ul>
 
